<resources>
    <string name="app_name">GVRAfricanDu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pms">PMS</string>
    <string name="pms_price">₹ 00.00</string>
    <string name="ago">AGO</string>
    <string name="ago_price">₹ 00.00</string>
    <string name="volume">VALUME</string>
    <string name="liters">Litres</string>
    <string name="liters_value">0.0000</string>

    <string name="price">Price</string>
    <string name="price_value">0.0000</string>
    <string name="verify">Verify</string>
    <string name="success_message">Success Message</string>
    <string name="waulypod">WAULYPOD</string>
    <string name="continues">Continue</string>
    <string name="permission">Permission needed</string>

    <string name="txt_dv_setup">DU Set-up</string>
    <string name="str_gvr_wauly">GVR WAULY</string>

    <string name="no_network_msg">Please check your connection and try again.</string>
    <string name="please_enter_device_id">Please Enter Device ID</string>
    <string name="id_verified_successfully">Device ID verified successfully, Click on continue to setup device.</string>
    <string name="id_verified_fail"> Device ID is not registered with the system.</string>
    <string name="id_verified_unable"> Unable to verify Device ID, please try again.</string>
    <string name="id_verified_some_error"> Some error occurred. Please try again later.</string>
    <string name="fuel_type"> Fuel Type</string>
    <string name="fp_type">FP Type</string>
    <string name="sleep_time">Sleep Time</string>
    <string name="ip_address">Ip Address</string>
    <string name="port">Port</string>




</resources>
