<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="79dp"
        android:text="@string/waulypod"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#00bfff"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColorHint="#00bfff">

        <EditText
            android:id="@+id/device_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_device_id"
            android:inputType="textCapWords"
            android:textColor="#00bfff"
            android:textColorHighlight="#00bfff"
            android:textColorHint="#00bfff" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/success_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/success_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/verify_button"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="15sp" />

    <!--&lt;!&ndash; verify Button &ndash;&gt;-->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/verify_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#00bfff"
        android:padding="16.67dp"
        android:text="@string/verify"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#00bfff"
        android:padding="16.67dp"
        android:text="@string/continues"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>
